--- a/C_Pi/Makefile
+++ b/C_Pi/Makefile
@@ -1,6 +1,10 @@
+CC=fccpx
+#CC=fcc
+CFLAGS=-Kfast
+
 all: C_Pi
 
 C_Pi: C_Pi.c
-        fccpx -Kfast C_Pi.c -o C_Pi
+        $(CC) $(CFLAGS) C_Pi.c -o C_Pi
 clean:
         rm -rf C_Pi ./C_Pi.sh.*.err ./C_Pi.sh.*.out ./C_Pi.sh.*.stats
