--- a/MPI_Pi/Makefile
+++ b/MPI_Pi/Makefile
@@ -1,7 +1,11 @@
+CC=mpifccpx
+#CC=mpifcc
+CFLAGS=-Kfast,openmp
+
 all: MPI_Pi
 
 MPI_Pi: MPI_Pi.c
-	fccpx -Kfast,openmp MPI_Pi.c -o MPI_Pi
+	$(CC) $(CFLAGS)  MPI_Pi.c -o MPI_Pi
 clean:
 	rm -rf MPI_Pi
 	rm -rf ./MPI_Pi.sh.*.err ./MPI_Pi.sh.*.out ./MPI_Pi.sh.*.stats
